Home: Fix organization layout 1. fix broken layout when resize browser smaller 2. move tab menu of notification location

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -482,7 +482,7 @@ span.issue-label {
 }
 
 .subtab-wrap {
-    padding:5px 15px;
+    padding:5px 10px;
 }
 
 .nav-subtab {
